23. fix align with FxFlex. Fix HomeComponent, AddUserComponent.

--- a/reg-exp/front-end/src/app/appComponent/app.component.css
+++ b/reg-exp/front-end/src/app/appComponent/app.component.css
@@ -1,8 +1,7 @@
-.footer {
-  position: fixed;
-  bottom: 0;
+footer.footer {
+
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   line-height: 60px;
   margin: 0;
   padding: 0;
