--- a/reg-exp/front-end/src/app/components/projectInfo/home/home.component.css
+++ b/reg-exp/front-end/src/app/components/projectInfo/home/home.component.css
@@ -29,22 +29,7 @@ a:hover {
 
 .mycustom {
   color: white;
-  height: 100%;
-  flex-direction: row;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 175px;
-  background-color: #f5f5f5;
-  position: absolute;
-  width: 100%;
 }
 
-@media (max-width: 1035px) {
-  .mycustom {
-    padding-top: 50px;
-  }
-}
+
 
